--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "devDependencies": {
     "babel": "^4.7.16",
     "gulp": "^3.8.11",
-    "gulp-babel": "^4.0.0"
+    "gulp-babel": "^4.0.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-sourcemaps": "^1.2.8"
   },
   "scripts": {
     "watch": "gulp watch"
