--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "devDependencies": {
     "babel": "^4.7.16",
+    "bower": "~1.3.12",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
-    "gulp-uglify": "^1.0.2",
-    "gulp-sourcemaps": "^1.2.8"
+    "gulp-bower": "0.0.10",
+    "gulp-concat": "^2.5.2",
+    "gulp-notify": "^2.2.0",
+    "gulp-ruby-sass": "^1.0.1",
+    "gulp-sourcemaps": "^1.2.8",
+    "gulp-uglify": "^1.0.2"
   },
   "scripts": {
-    "watch": "gulp watch"
+    "init": "gulp init",
+    "watch": "gulp watch",
+    "release": "gulp release"
   }
 }
